--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -30,14 +30,14 @@
 
 
         <receiver
-            android:name="com.google.android.gcm.GcmBroadcastReceiver"
+            android:name="com.app.poke.poke.GcmBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <category android:name="com.example.gcm" />
             </intent-filter>
         </receiver>
-        <service android:name="com.google.android.gcm.GcmIntentService" />
+        <service android:name="com.app.poke.poke.GcmIntentService" />
     </application>
 
 
