--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -38,6 +38,12 @@
             </intent-filter>
         </receiver>
         <service android:name="com.app.poke.poke.GcmIntentService" />
+        <service
+            android:name=".ListenerService" >
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
+            </intent-filter>
+        </service>
     </application>
 
 
